# SamaritanDB

./: README.md  plans.md
database/: Cargo.toml  main.rs
database/.resource/: conf.json
database/contract/: Cargo.toml  lib.rs
database/src/: cli.rs  contract.rs  network.rs  prelude.rs  server.rs  setup.rs  util.rs
sam_os/: Cargo.toml  lib.rs
samaritan_db/: Cargo.toml
samaritan_db/ipfs/: Pe8DkhwIIG.json
samaritan_db/sam_os/: lib.rs
samaritan_db/src/: contract.rs  ipfs.rs  main.rs  sam_prelude.rs  test.rs  util.rs
